Fix search table horizontal scroll

--- a/css/includes/pages/_search.scss
+++ b/css/includes/pages/_search.scss
@@ -92,7 +92,6 @@
         .search-card {
             @include media-breakpoint-up(sm) {
                 min-width: 100%;
-                width: min-content;
 
                 .search-header {
                     border-bottom: 0;
